Fix isBlank for JDK8